--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ section{
     padding: 2rem;
     font-size: 1.5rem;
     font-style: italic;
-    background: var(--primary);
+    background: #f5a623;
     border-radius: .5rem;
     color: var(--black);
     line-height: 2;
@@ -405,8 +405,33 @@ section{
     position: absolute;
     bottom: -1.5rem; left: .7rem;
     height: 3rem; width: 3rem;
-    background: var(--primary);
+    background: #f5a623;
     transform: rotate(45deg);
+}
+
+.reviews .slide {
+    display: inline-block;
+    position: relative;
+    margin-top: 1rem;
+    background-color: #000000;
+    color: black; 
+    padding: 3px 20px 10px 15px;
+    border: none; 
+    border-radius: 8px; 
+    z-index: 1;
+}
+
+.reviews .slide::before{
+    content: '';
+    position: absolute;
+    bottom: 8px; 
+    right: 8px; 
+    width: 100%;
+    height: 100%;
+    background-color: #f5a623; 
+    z-index: -1; 
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
 }
 
 .reviews .slide .user{
