--- a/style.css
+++ b/style.css
@@ -436,6 +436,32 @@ section{
     transform: rotate(45deg);
 }
 
+.reviews .slide {
+    display: inline-block;
+    position: relative;
+    margin-top: 1rem;
+    background-color: #000000;
+    color: black; 
+    padding: 3px 20px 10px 15px;
+    border: none; 
+    border-radius: 8px; 
+    z-index: 1;
+    overflow-y: auto;
+}
+
+.reviews .slide::before{
+    content: '';
+    position: absolute;
+    bottom: 8px; 
+    right: 8px; 
+    width: 100%;
+    height: 100%;
+    background-color: #f5a623; 
+    z-index: -1; 
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+}
+
 .reviews .slide .user{
     display: flex;
     align-items: center;
